Correct a typo Change a typo in the ingredients list.

--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -13,7 +13,7 @@
     <p>This delicious rib rub is a delicious way to add rub to ribs!
         <ul>
             <h3>Ingredients</h3>
-            <li>Pasta/li>
+            <li>Pasta</li>
             <li>water</li>
             <li>Pasta Sauce</li>
             <li>Parmesan Cheese</li>
